# OpenSoccerTrainingAI

./: Dockerfile  Full_Soccer_Drills_List.csv  Pipfile  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py  cone_layout_drawer.py  cone_layout_setup.py  draw_cone_layout.py  drill_manager.py  read_drills.py  setup_drills.py  setupcones.py
