[tool.poetry]
name = "kickmaster"
version = "0.1.0"
description = ""
authors = ["Gareth Murphy <16783958+garethcmurphy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.13"
folium = "^0.19.2"
matplotlib = "^3.10.0"
plotly = "^5.24.1"
numpy = "^2.2.1"
pandas = "^2.2.3"
streamlit = "^1.41.1"
pydantic = "^2.10.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
pylint = "^3.3.3"
flake8 = "^7.1.1"
ruff = "^0.8.4"
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
